2008-01-14  Alexander Larsson  <alexl@redhat.com>

        * gasyncresult.c:
	Clean up docs and example for GAsyncResult (#508074)

2008-01-11  Murray Cumming  <murrayc@murrayc.com>

	* gfile.c: Clarify the sentence about GAsyncReadyCallback, 
	and correct some spelling mistakes. Bug #508108.

2008-01-11  Matthias Clasen <mclasen@redhat.com>

	* glocalfileinfo.c: Add a comment.

2008-01-10  Murray Cumming  <murrayc@murrayc.com>

	* gfileinfo.c: GFileInfo description: Mention 
	how to actually set attributes in a GFile and how to discover 
	which attributes are settable. Bug #508378.

2008-01-10  A. Walton  <awalton@svn.gnome.org>

	* gdesktopappinfo.c: (g_app_info_get_all_for_type),
	(g_app_info_get_default_for_type):
	Check for NULL content types.

2008-01-10  Frederic Crozat  <fcrozat@mandriva.com>

	* gunixmounts.c: add rpc_pipefs to systemfs list (#508309).

2008-01-09  Murray Cumming  <murrayc@murrayc.com>

	* gfile.c: *_async() functions: Several small corrections 
	to the documentation, mostly correcting copy/paste errors 
	and improving some sentences.

2008-01-09  Dan Winship  <danw@gnome.org>

	* glocalfile.c (get_unique_filename): x86_64 fix

2008-01-09  Alexander Larsson  <alexl@redhat.com>

        * gio.symbols:
        * gunixmount.c:
        * gunixmounts.[ch]:
	Add g_unix_mount_guess_should_display and use
	for unix volume monitor backend.
	This means we more or less show what the
	gnome-vfs backend did.
	Based on patch from Padraig O'Briain

2008-01-09  Alexander Larsson  <alexl@redhat.com>

        * gio.symbols:
        * gthemedicon.[ch]:
        Add g_themed_icon_new_with_default_fallbacks
	
        * gunixmounts.c:
	Use default fallbacks for icons

2008-01-09  Alexander Larsson  <alexl@redhat.com>

        * gio-marshal.list:
        * gmountoperation.[ch]:
	Change the API a bit so that unhandled methods
	get reported via the reply, rather than by
	the signal emission return value. This is because